--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -9,7 +9,7 @@
 
   - name: Install MongoDB
     ansible.builtin.package: #Ansible package module
-      name: mongodb-org -y 
+      name: mongodb-org 
       state: present
 
   - name: Start & Enable MongoDB Service
