--- a/catalouge.yml
+++ b/catalouge.yml
@@ -4,10 +4,10 @@
   become: yes
   tasks:
   - name: Disable old nodejs and enable nodejs:18
-    ansible.builtin.command: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
+    ansible.builtin.shell: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
 
   - name: Install NodeJS
     ansible.builtin.dnf: 
       name: nodejs
       state: present
-      
+
