--- a/catalouge.yml
+++ b/catalouge.yml
@@ -5,9 +5,20 @@
   tasks:
   - name: Disable old nodejs and enable nodejs:18
     ansible.builtin.shell: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
+#Shell and command module, shell with login to target server to run 
 
   - name: Install NodeJS
     ansible.builtin.dnf: 
       name: nodejs
       state: present
+
+  - name: Creat roboshop user
+    ansible.builtin.user: #Ansible user module
+      name: roboshop
+
+  - name: Creat app directory
+    ansible.builtin.file:
+      path: /app
+      state: directory
+
 
