--- a/catalouge.yml
+++ b/catalouge.yml
@@ -22,10 +22,15 @@
       state: directory
 
   - name: Download the application code to created app directory.
-    ansible.builtin.uri:
+    ansible.builtin.get_url: #Ansible get url module
       url: curl -o /tmp/catalogue.zip https://roboshop-builds.s3.amazonaws.com/catalogue.zip
-
-
+      dest: /tmp
+    
+  - name: Unzip catalogue application
+      ansible.builtin.unarchive:  #unarchive module
+        src: /tmp/catalogue.zip
+        dest: /app
+        remote_src: yes
 
 
 
