Ading mongodb playbook

--- a/catalouge.yml
+++ b/catalouge.yml
@@ -23,10 +23,13 @@
 
   - name: Download the application code to created app directory.
     ansible.builtin.get_url: #Ansible get url module
-      url: curl -o /tmp/catalogue.zip https://roboshop-builds.s3.amazonaws.com/catalogue.zip
+      url: https://roboshop-builds.s3.amazonaws.com/catalogue.zip
       dest: /tmp
     
-
-
+  - name: Unzip catalogue application
+      ansible.builtin.unarchive:
+        src: /tmp/catalogue.zip
+        dest: /app
+        remote_src: yes
 
 
