--- a/catalouge.yml
+++ b/catalouge.yml
@@ -26,6 +26,10 @@
       url: https://roboshop-builds.s3.amazonaws.com/catalogue.zip
       dest: /tmp
     
-
+  - name: Unzip
+    ansible.builtin.unarchive: #Ansible unzip module
+      src: /tmp/catalogue.zip
+      dest: /app
+      
 
 
