--- a/catalouge.yml
+++ b/catalouge.yml
@@ -30,6 +30,6 @@
     ansible.builtin.unarchive: #Ansible unzip module
       src: /tmp/catalogue.zip
       dest: /app
-      
+      remote_src: yes
 
 
