--- a/catalouge.yml
+++ b/catalouge.yml
@@ -39,7 +39,7 @@
 
   - name: Copy the catalogue.service file
     ansible.builtin.copy:  #Search "ansible copy module" in google to find the modules
-      src: catalouge.service
+      src: catalogue.service
       dest: etc/systemd/system/catalogue.service
 
   - name: Daemon reload
