--- a/inventory.ini
+++ b/inventory.ini
@@ -4,8 +4,8 @@ web.haripalepu.cloud
 [MongoDB]
 mongodb.haripalepu.cloud
 
-[Catalouge]
-catalouge.haripalepu.cloud
+[Catalogue]
+catalogue.haripalepu.cloud
 
 [User]
 user.haripalepu.cloud
