--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -29,4 +29,7 @@
     ansible.builtin.service: 
       name: mongod
       state: restarted 
+
+#Command to run this play book: 
+#ansible-playbook -i inventory.ini -e ansible_user=centos -e ansible_password=DevOps321 mongodb.yaml
       
