--- a/catalogue.yml
+++ b/catalogue.yml
@@ -59,7 +59,7 @@
       state: present
 
   - name: Get the catagories count #if the count is 0 i.e, no data in catalogue server
-    ansible.buildin.command: mongo --host mongodb.haripalepu.cloud --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
+    ansible.builtin.command: mongo --host mongodb.haripalepu.cloud --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
     register: products_count
 
   - name: print the count
