--- a/roboshop.conf
+++ b/roboshop.conf
@@ -4,7 +4,7 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalouge.haripalepu.cloud:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue.haripalepu.cloud:8080/; }
 location /api/user/ { proxy_pass http://user.haripalepu.cloud:8080/; }
 location /api/cart/ { proxy_pass http://cart.haripalepu.cloud:8080/; }
 location /api/shipping/ { proxy_pass http://shipping.haripalepu.cloud:8080/; }
