--- a/catalogue.yml
+++ b/catalogue.yml
@@ -65,15 +65,15 @@
 
   - name: Get the catagories count #if the count is 0 i.e, no data in catalogue server
     ansible.builtin.command: mongo --host mongodb.haripalepu.cloud --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
-    register: products_count
+    register: product_count
 
   - name: print the count
     ansible.builtin.debug: #To print the content
-      msg: "products_count: {{products_count}}"
+      msg: "product_count: {{product_count}}"
 
   - name: Load catalogue data 
     ansible.builtin.command: mongo --host mongodb.haripalepu.cloud </app/schema/catalogue.js
-    when: products_count.stdout == "0"  #When is a condition in ansible like if & else in linux
+    when: product_count.stdout == "0"  #When is a condition in ansible like if & else in linux
 
   - name: Start & Enable Catalogue Service
     ansible.builtin.service: 
