--- a/catalogue.yml
+++ b/catalogue.yml
@@ -76,7 +76,7 @@
   #   when: product_count.stdout == 0 #When is a condition in ansible like if & else in linux
 
   - name: load catalogue data
-    ansible.builtin.command: mongo --host mongodb.daws76s.online < /app/schema/catalogue.js
+    ansible.builtin.command: mongo --host mongodb.haripalepu.cloud < /app/schema/catalogue.js
     when: product_count.stdout == "0"
 
   - name: Start & Enable Catalogue Service
