--- a/catalogue.yml
+++ b/catalogue.yml
@@ -73,7 +73,7 @@
 
   - name: Load catalogue data 
     ansible.builtin.command: mongo --host mongodb.haripalepu.cloud < /app/schema/catalogue.js
-    when: product_count.stdout == 0 #When is a condition in ansible like if & else in linux
+    when: product_count.stdout == "0" #When is a condition in ansible like if & else in linux
 
   # - name: load catalogue data
   #   ansible.builtin.command: mongo --host mongodb.haripalepu.cloud < /app/schema/catalogue.js
