--- a/redis.yml
+++ b/redis.yml
@@ -23,7 +23,7 @@
       replace: 0.0.0.0
 
   - name: Start and Enable redis
-    anisible.builtin.service:
+    ansible.builtin.service:
       name: redis
       state: started 
       enabled: yes
