--- a/redis.yml
+++ b/redis.yml
@@ -6,7 +6,7 @@
     ansible.builtin.dnf: #dnf or package
       name: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
       state: present
-      #disable_gpg_check: true
+      disable_gpg_check: true
 
   - name: Enable redis
     ansible.builtin.command: module enable redis:remi-6.2
