--- a/redis.yml
+++ b/redis.yml
@@ -9,7 +9,7 @@
       disable_gpg_check: true
 
   - name: Enable redis
-    ansible.builtin.command: module enable redis:remi-6.2
+    ansible.builtin.command: dnf module enable redis:remi-6.2
 
   - name: Install Redis
     ansible.builtin.package: 
