--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -9,7 +9,7 @@
     ansible.builtin.command: curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | bash
 
   - name: Install rabbitmq server 
-    ansible.buitin.dnf:
+    ansible.builtin.dnf:
       name: rabbitmq-server
       state: present
 
