--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -3,10 +3,10 @@
   become: yes
   tasks:
   - name: configure yum erlang repo
-    ansible.builtin.command: curl -s https://packagecloud.io/install/repositories/rabbitmq/erlang/script.rpm.sh | bash
+    ansible.builtin.shell: curl -s https://packagecloud.io/install/repositories/rabbitmq/erlang/script.rpm.sh | bash
 
   - name: Configure YUM Repos for RabbitMQ
-    ansible.builtin.command: curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | bash
+    ansible.builtin.shell: curl -s https://packagecloud.io/install/repositories/rabbitmq/rabbitmq-server/script.rpm.sh | bash
 
   - name: Install rabbitmq server 
     ansible.builtin.dnf:
