--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -1,6 +1,6 @@
 ---
 - name: MongoDB Palybook
-  hosts: MongoDB
+  hosts: MongoDB #host name should match with name given in inventory file
   become: yes
   tasks:
   - name: Copy the mongodb.repo file
